rust/macros/tests/ui/fail/undefined_role.stderr
error: Choreography parse error:
       Undefined role 'C'
         --> input:3:13
           |
         3 |        A -> C : Ping}
                         ^^

       Macro token input is parsed from original source text.
       Use the canonical indentation-based DSL surface in token form.
 --> tests/ui/fail/undefined_role.rs:4:1
  |
4 | / tell! {
5 | |     protocol Bad =
6 | |       roles A, B
7 | |       A -> C : Ping
8 | | }
  | |_^
  |
  = note: this error originates in the macro `tell` (in Nightly builds, run with -Z macro-backtrace for more info)
